# hakoniwa-drone-education

./: .gitignore  README.md  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
colab/: alt_control.ipynb
docker/: Dockerfile  README.md  env.bash  image_name.txt  init_script.sh  run.bash
docs/: README.md
installer/: install.bash
installer/linux/: install.bash
installer/mac/: install.bash
models/: README.md  alt_control.json  plant_alt.json  roll_control.json  spd_alt_control.json  spd_roll_control.json
models/constants/: constants.json
src/drone_control/: CMakeLists.txt
src/drone_control/common/include/: drone_alt_controller.hpp  drone_angle_controller.hpp  drone_controller.hpp  drone_heading_controller.hpp  drone_pos_controller.hpp  drone_radio_controller.hpp  pid_control.hpp
src/drone_control/config/: param-api-mixer.txt  param-api.txt  param-rc.txt
src/drone_control/workspace/AltSpeedController/: CMakeLists.txt  hako_module_drone_controller_impl.cpp
src/drone_control/workspace/AngleController/: CMakeLists.txt  hako_module_drone_controller_impl.cpp
src/drone_control/workspace/FlightController/: hako_module_drone_controller_impl.cpp
src/drone_control/workspace/PlantController/: CMakeLists.txt  hako_module_drone_controller_impl.cpp
src/drone_control/workspace/PositionController/: CMakeLists.txt  hako_module_drone_controller_impl.cpp
src/drone_control/workspace/RadioController/: hako_module_drone_controller_impl.cpp
src/drone_control/workspace/SpeedController/: CMakeLists.txt  hako_module_drone_controller_impl.cpp
(+110 files in other folders)
